<resources>
    <string name="app_name">Fridgelog</string>
    <string name="get_started">Get started</string>

    <string name="label_addcategory">Add category</string>
    <string name="label_additem">Add item</string>
    <string name="label_dateadded">Date added</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_shelf">Shelf</string>
    <string name="label_edititem">Edit item</string>
    <string name="label_fridge">Fridge</string>
    <string name="label_shelfmarker">S</string>
    <string name="label_days">D</string>
    <string name="label_quantitymarker">Qty</string>
    <string name="label_settings">Categories</string>
    <string name="label_shoppinglist">Shopping list</string>

    <string name="hint_category">Category</string>
    <string name="hint_name">Name</string>
    <string name="hint_dateadded">Date added</string>

    <string name="button_add">Add</string>
    <string name="button_save">Save</string>

    <string-array name="sortingOptions">
        <item>Sort by</item>
        <item>Name</item>item>
        <item>Category</item>
        <item>Shelf</item>
    </string-array>

</resources>
