<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_additem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lobster_two"
        android:text="@string/label_additem"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <AutoCompleteTextView
        android:id="@+id/add_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_below="@id/label_additem"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textCapSentences"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/add_scanbutton"
        android:layout_width="34dp"
        android:layout_height="39dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_toEndOf="@id/add_name"
        app:srcCompat="@drawable/ic_camera" />

    <TextView
        android:id="@+id/label_dateadded"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/add_name"
        android:text="@string/label_dateadded"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/add_date"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/add_name"
        android:layout_toEndOf="@id/label_dateadded"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/hint_dateadded"
        android:inputType="date"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/add_categories"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_below="@id/label_dateadded"/>

    <TextView
        android:id="@+id/label_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_categories"
        android:layout_marginStart="24dp"
        android:text="@string/label_quantity"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_qty"
        android:layout_width="28dp"
        android:layout_height="45dp"
        android:layout_toEndOf="@id/label_quantity"
        android:layout_below="@id/add_date"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_shelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_quantity"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/label_shelf"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_shelf"
        android:layout_width="28dp"
        android:layout_height="45dp"
        android:layout_toEndOf="@id/label_shelf"
        android:layout_below="@id/add_qty"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/add_savebutton"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_below="@id/add_date"
        android:layout_toRightOf="@id/add_qty"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:text="@string/button_add"
        android:textSize="20dp"
        android:textColor="@color/colorAccent" />

</RelativeLayout>