<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_addcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lobster_two"
        android:text="@string/label_addcategory"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <AutoCompleteTextView
        android:id="@+id/cat_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_below="@id/label_addcategory"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textCapSentences"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cat_savebutton"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_below="@id/cat_name"
        android:layout_marginStart="180dp"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:text="@string/button_add"
        android:textSize="20dp"
        android:textColor="@color/colorAccent" />

</RelativeLayout>